<resources>
    <string name="app_name">求美者</string>
    <string name="sure">确定</string>
    <string name="agree">同意</string>
    <string name="cancel">取消</string>
    <string name="refuse">拒绝</string>
    <!-- 加载状态相关 -->
    <string name="view_empty">没有数据~</string>
    <string name="view_network_error">网络连接异常~</string>
    <string name="dialog_hint">正在发帖，请稍后~</string>
    <string name="dialog_modify">正在修改资料，请稍后~</string>
    <string name="view_no_network">没有网络~</string>
    <!--toast-->
    <string name="empty_content">写点什么吧</string>
    <string name="wexin_content">您还未安装微信客户端</string>
    <string name="toast_sort">请选择分类</string>
    <string name="toast_post">回帖失败，请重新尝试</string>
    <string name="toast_post_error">发帖失败，请重新尝试</string>
    <string name="toast_phone">请填写正确的手机号</string>
    <string name="toast_number">请输入字母或是数字</string>
    <string name="toast_code">请填写验证码</string>
    <string name="toast_time_out">验证码过期</string>
    <string name="toast_login">请先登录</string>
    <string name="toast_wexin_login_fail">微信登录失败</string>
    <!--登录-->
    <string name="login">登录</string>
    <string name="pass_word">请输入密码</string>
    <string name="ensure_pass_word">请确认密码</string>
    <string name="error_word">密码错误</string>

    <string name="share">分享到</string>
    <string name="get_code">获取验证码</string>
    <string name="login_fast">手机号快捷登录</string>
    <string name="login_forget">忘记密码</string>
    <string name="login_other">其他登录方式</string>
    <!--我的-->
    <string name="my_name">给自己起个名字吧</string>
    <string name="my_title">个人中心</string>
    <string name="modify_nick">昵称</string>
    <string name="modify_message">修改个人资料</string>
    <string name="modify_head">修改头像</string>
    <string name="save">保存</string>
    <string name="modify_success">资料修改成功</string>
    <string name="modify_fail">服务器出了点小问题,请稍后再试</string>

    <!--提示-->

    <string name="hint_message">关于变美的话题，想说点什么</string>
    <!--随便说-->
    <string name="say">随便说</string>
    <string name="say_publish">发布</string>
    <string name="say_tag">选择标签</string>
    <!--问医生-->
    <string name="find">发现</string>
    <string name="ask">问医生</string>
    <string name="ask_public">公开</string>
    <string name="ask_private">私密</string>
    <!--咨询室-->
    <string name="consult_ing">咨询中</string>
    <string name="consult_start">开启咨询</string>
    <string name="consult_no_start">直播尚未开始</string>
    <string name="consult_home">咨询室</string>
    <string name="consult_my">我的咨询室</string>
    <string name="consult_close">咨询室已关闭</string>
    <string name="consult_modify_tip">咨询室介绍</string>
    <string name="consult_modify">咨询室</string>
    <string name="consult_introduce">咨询室介绍</string>
    <string name="consult_cover">封面照片</string>
    <string name="consult_pass">门锁密码修改</string>
    <string name="consult_pass_equal">请重新确认密码</string>
    <string name="consult_pass_error">原密码错误</string>
    <string name="consult_agree">是否允许其他人进入</string>
    <string name="mic_fail">连麦申请失败</string>

    <!-- live play -->
    <string name="send">发送</string>
    <string name="start_record">录制</string>
    <string name="end_record">停录</string>
    <string name="invite_dialog_tips">主播邀请您与他进行互动直播</string>
    <string name="live_end_ask_tips">确定结束直播?</string>
    <string name="live_end_tips">直播结束啦</string>
    <string name="live_time_tips">直播时长</string>
    <string name="live_members_tips">观看人数</string>
    <string name="live_admires_tips">获赞数量</string>

    <string name="loading">加载中</string>
    <string name="load_success">加载成功</string>
    <string name="load_fail">加载失败</string>
    <string-array name="emoji">
        <item>emoji_0.png,[微笑]</item>
        <item>emoji_2.png,[撇嘴]</item>
        <item>emoji_3.png,[色]</item>
        <item>emoji_7.png,[害羞]</item>
        <item>emoji_9.png,[睡]</item>
        <item>emoji_14.png,[呲牙]</item>
        <item>emoji_15.png,[惊讶]</item>
        <item>emoji_11.png,[尴尬]</item>
        <item>emoji_27.png,[惊恐]</item>
        <item>emoji_29.png,[憨笑]</item>
        <item>emoji_31.png,[奋斗]</item>
        <item>emoji_33.png,[疑问]</item>
        <item>emoji_40.png,[再见]</item>
        <item>emoji_80.png,[强]</item>
        <item>emoji_82.png,[握手]</item>
        <item>emoji_83.png,[胜利]</item>
        <item>emoji_84.png,[抱拳]</item>
        <item>emoji_85.png,[勾引]</item>
        <item>emoji_86.png,[拳头]</item>
        <item>emoji_90.png,[OK]</item>
    </string-array>

    <string-array name="sort">
        <item>眼部</item>
        <item>鼻部</item>
        <item>胸部</item>
        <item>皮肤</item>
        <item>牙齿</item>
        <item>美体塑形</item>
        <item>面部轮廓</item>
        <item>其他</item>
    </string-array>
    <string-array name="sortNumber">
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>134</item>
    </string-array>
</resources>
