<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/light_gray"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<TextView
    android:id="@+id/title"
    android:padding="@dimen/h6"
    android:layout_width="wrap_content"
    android:text="@string/consult_modify_tip"
    android:layout_gravity="center_horizontal"
    android:layout_height="wrap_content" />
    <EditText
        android:textSize="16sp"
        android:gravity="left"
        android:padding="@dimen/h6"
        android:id="@+id/consult_introduces"
        android:layout_width="match_parent"
        android:lines="3"
        android:maxLength="50"
        android:background="@drawable/edit_text_back"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:layout_marginTop="@dimen/h6"
        android:gravity="right"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/btn_cancel"
            android:layout_gravity="right"
            android:layout_margin="@dimen/h6"
            android:text="@string/cancel"
            android:paddingTop="@dimen/h6"
            android:paddingBottom="@dimen/h6"
            android:paddingRight="@dimen/h10"
            android:paddingLeft="@dimen/h10"
            android:background="@drawable/login_text_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/btn_sure"
            android:layout_gravity="right"
            android:layout_margin="@dimen/h6"
            android:text="@string/sure"
            android:paddingTop="@dimen/h6"
            android:paddingBottom="@dimen/h6"
            android:paddingRight="@dimen/h10"
            android:paddingLeft="@dimen/h10"
            android:background="@drawable/bg_btn_login_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>