<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:gravity="center"
        android:textSize="@dimen/p16"
        android:textColor="@color/white"
        android:text="直播结束"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- 直播时长 -->
    <TextView
        android:id="@+id/tv_time"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="00:00"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:text="@string/live_time_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- 观看人数 -->
    <TextView
        android:id="@+id/tv_members"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="@dimen/p16"
        android:textColor="@color/white"
        android:text="7989"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/p16"
        android:textColor="@color/white"
        android:text="@string/live_members_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <!-- 获赞数量 -->
    <TextView
        android:id="@+id/tv_admires"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:textSize="@dimen/p16"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="8080"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/p16"
        android:textColor="@color/white"
        android:text="@string/live_admires_tips"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:id="@+id/btn_cancel"
        android:layout_marginTop="50dp"
        android:padding="5dp"
        android:textSize="@dimen/p16"
        android:textColor="@color/red"
        android:text="返回"
        android:gravity="center"
        android:layout_width="225dp"
        android:layout_height="wrap_content" />
</LinearLayout>
